# sentry-rust-minidump

./: Cargo.toml  README.md
.github/workflows/: test.yml
examples/: app.rs
src/: client.rs  lib.rs  server.rs
tests/: e2e.rs  server.rs
