[package]
description = "Captures native crashes as minidumps and sends to Sentry"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "sentry-rust-minidump"
readme = "README.md"
repository = "https://github.com/timfish/sentry-rust-minidump"
version = "0.6.1"

[dependencies]
minidumper-child = "0.2"
sentry = "0.31"
thiserror = "1"

[dev-dependencies]
actix-rt = "2.7"
sadness-generator = "0.5"
sentry-test-server = {git = "https://github.com/timfish/sentry-test-server.git", rev = "134c30e"}
