[package]
description = "Captures native crashes as minidumps and sends to Sentry"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "sentry-rust-minidump"
readme = "README.md"
repository = "https://github.com/timfish/sentry-rust-minidump"
version = "0.12.0"

[dependencies]
minidumper-child = "0.2"
sentry = "*"
thiserror = "2"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
actix-rt = "2.7"
sadness-generator = "0.6"
sentry-test-server = {git = "https://github.com/timfish/sentry-test-server.git", rev = "7cc1db5e"}

[features]
ipc = ["dep:serde", "dep:serde_json"]